kupale: initial package list
Signed-off-by: Armin Kuster <akuster808@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -3,8 +3,8 @@ BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-	${LAYERDIR}/recipes-*/*/*.bbappend"
+        ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "kūpale"
-BBFILE_PATTERN_kūpale = "^${LAYERDIR}/"
-BBFILE_PRIORITY_kūpale = "6"
+BBFILE_COLLECTIONS += "kupale-layer"
+BBFILE_PATTERN_kupale-layer = "^${LAYERDIR}/"
+BBFILE_PRIORITY_kupale-layer = "5"
