layer: add custome license to layer
Signed-off-by: Armin Kuster <akuster808@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,6 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "kupale-layer"
 BBFILE_PATTERN_kupale-layer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_kupale-layer = "5"
+
+
+LICENSE_PATH += "${LAYERDIR}/custom-licenses"
